Prevent inner shadow on iOS (#266)

--- a/src/components/input/_input.scss
+++ b/src/components/input/_input.scss
@@ -23,6 +23,12 @@
     }
   }
 
+  &--text,
+  &--textarea {
+    // Prevent inner shadow on iOS
+    -webkit-appearance: none;
+  }
+
   &:hover {
     border-color: $color-links-hover;
   }
